// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ScoreControls> renders as expected by default 1`] = `
<div
  className="score-controls"
  id="stepShodanControls"
>
  <div
    className="sentence-control"
  >
    <button
      className="sentence-control__prev"
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-step-backward"
      />
    </button>
    <div
      className="sentence-control__status "
    >
      <span
        className="sentence-control__title"
      >
        Measure:
      </span>
      <span
        className="sentence-control__current"
      >
        4
        /
        3
      </span>
    </div>
    <button
      className="sentence-control__next"
      disabled={false}
      onClick={[Function]}
    >
      <i
        className="fas fa-step-forward"
      />
    </button>
  </div>
  <div
    className="score-controls__time"
  >
    <div
      className="score-controls__elapsed-time"
    >
      00:00
    </div>
    <div
      className="video-progress"
    >
      <Connect(TimelineScrubber)
        duration={2000}
        startTime={0}
      />
    </div>
    <div
      className="score-controls__remaining-time"
    >
      33:20
    </div>
  </div>
  <div
    className="score-controls__filters"
    id="stepShodanFilters"
  >
    <button
      className="score-controls__filters-button"
      disabled={false}
      onClick={[Function]}
    >
      Filters
    </button>
    <div
      className="score-controls__filters-popup hidden"
    >
      <ul
        className="channel-toggles"
      >
        <li
          className="toggles__title"
        >
          Lines
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreBeat"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreBeat"
            >
              <span
                className="custom-checkbox__text"
              >
                Beat
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreText"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreText"
            >
              <span
                className="custom-checkbox__text"
              >
                Text
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scorePercussion"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scorePercussion"
            >
              <span
                className="custom-checkbox__text"
              >
                Ōtsu-Kotsuzumi
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreNohkan"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreNohkan"
            >
              <span
                className="custom-checkbox__text"
              >
                Nohkan
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreDance"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreDance"
            >
              <span
                className="custom-checkbox__text"
              >
                Dance
              </span>
            </label>
          </div>
        </li>
      </ul>
      <ul
        className="measure-toggles"
      >
        <li
          className="toggles__title"
        >
          Sentences
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scorePrevSentence"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scorePrevSentence"
            >
              <span
                className="custom-checkbox__text"
              >
                Previous Sentence
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreNextSentence"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreNextSentence"
            >
              <span
                className="custom-checkbox__text"
              >
                Next Sentence
              </span>
            </label>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<ScoreControls> renders as expected by default at the end of the duration time 1`] = `
<div
  className="score-controls"
  id="stepShodanControls"
>
  <div
    className="sentence-control"
  >
    <button
      className="sentence-control__prev"
      disabled={false}
      onClick={[Function]}
    >
      <i
        className="fas fa-step-backward"
      />
    </button>
    <div
      className="sentence-control__status "
    >
      <span
        className="sentence-control__title"
      >
        Measure:
      </span>
      <span
        className="sentence-control__current"
      >
        3
        /
        3
      </span>
    </div>
    <button
      className="sentence-control__next"
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-step-forward"
      />
    </button>
  </div>
  <div
    className="score-controls__time"
  >
    <div
      className="score-controls__elapsed-time"
    >
      25:00
    </div>
    <div
      className="video-progress"
    >
      <Connect(TimelineScrubber)
        duration={2000}
        startTime={0}
      />
    </div>
    <div
      className="score-controls__remaining-time"
    >
      08:20
    </div>
  </div>
  <div
    className="score-controls__filters"
    id="stepShodanFilters"
  >
    <button
      className="score-controls__filters-button"
      disabled={false}
      onClick={[Function]}
    >
      Filters
    </button>
    <div
      className="score-controls__filters-popup hidden"
    >
      <ul
        className="channel-toggles"
      >
        <li
          className="toggles__title"
        >
          Lines
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreBeat"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreBeat"
            >
              <span
                className="custom-checkbox__text"
              >
                Beat
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreText"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreText"
            >
              <span
                className="custom-checkbox__text"
              >
                Text
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scorePercussion"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scorePercussion"
            >
              <span
                className="custom-checkbox__text"
              >
                Ōtsu-Kotsuzumi
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreNohkan"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreNohkan"
            >
              <span
                className="custom-checkbox__text"
              >
                Nohkan
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreDance"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreDance"
            >
              <span
                className="custom-checkbox__text"
              >
                Dance
              </span>
            </label>
          </div>
        </li>
      </ul>
      <ul
        className="measure-toggles"
      >
        <li
          className="toggles__title"
        >
          Sentences
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scorePrevSentence"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scorePrevSentence"
            >
              <span
                className="custom-checkbox__text"
              >
                Previous Sentence
              </span>
            </label>
          </div>
        </li>
        <li>
          <div
            className="custom-checkbox"
          >
            <input
              checked={true}
              id="scoreNextSentence"
              onChange={[Function]}
              onKeyPress={null}
              type="checkbox"
            />
            <label
              htmlFor="scoreNextSentence"
            >
              <span
                className="custom-checkbox__text"
              >
                Next Sentence
              </span>
            </label>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<ScoreControls> renders as expected by default with a store 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ScoreControls)
    duration={2000}
    phrases={
      [
        {
          "beat": {
            "grid": [
              {
                "length": 1,
                "start": 1,
                "style": "normal",
                "text": "1",
                "voices": [
                  "jiutai",
                ],
              },
              {
                "length": 1,
                "start": 2,
                "style": "normal",
                "text": "2",
                "voices": [
                  "jiutai",
                ],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "3",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "4",
                "voices": [
                  "shite",
                ],
              },
              {
                "length": 1,
                "start": 7,
                "style": "normal",
                "text": "5",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "6",
                "voices": [],
              },
              {
                "length": 1,
                "start": 10,
                "style": "normal",
                "text": "7",
                "voices": [],
              },
              {
                "length": 1,
                "start": 12,
                "style": "normal",
                "text": "8",
                "voices": [
                  "shite",
                ],
              },
            ],
            "value": "",
          },
          "dance": {
            "grid": [
              {
                "length": 4,
                "start": 1,
                "style": "normal",
                "text": "9. Kneeling facing front.",
                "voices": [],
              },
            ],
            "value": "",
          },
          "nohkan": {
            "grid": [
              {
                "length": 2,
                "start": 1,
                "style": "normal",
                "text": "Naka no takane",
                "voices": [],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "Naka no takane",
                "voices": [],
              },
              {
                "length": 2,
                "start": 5,
                "style": "normal",
                "text": "Naka no takane",
                "voices": [],
              },
              {
                "length": 2,
                "start": 10,
                "style": "normal",
                "text": "Naka no takane",
                "voices": [],
              },
            ],
            "value": "",
          },
          "percussion": {
            "grid": [],
            "value": "mitsuji",
          },
          "phrase": "1",
          "startTime": {
            "grid": [],
            "value": 1192,
          },
          "syllableNumber": {
            "grid": [
              {
                "length": 1,
                "start": 0,
                "style": "normal",
                "text": "1",
                "voices": [],
              },
              {
                "length": 1,
                "start": 1,
                "style": "normal",
                "text": "2",
                "voices": [],
              },
              {
                "length": 1,
                "start": 2,
                "style": "normal",
                "text": "3",
                "voices": [],
              },
              {
                "length": 1,
                "start": 3,
                "style": "normal",
                "text": "4",
                "voices": [],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "5",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "6",
                "voices": [],
              },
              {
                "length": 1,
                "start": 6,
                "style": "normal",
                "text": "7",
                "voices": [],
              },
              {
                "length": 1,
                "start": 7,
                "style": "normal",
                "text": "1",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "2",
                "voices": [],
              },
              {
                "length": 1,
                "start": 9,
                "style": "normal",
                "text": "3",
                "voices": [],
              },
              {
                "length": 1,
                "start": 10,
                "style": "normal",
                "text": "4",
                "voices": [],
              },
              {
                "length": 1,
                "start": 11,
                "style": "normal",
                "text": "5",
                "voices": [],
              },
            ],
            "value": "",
          },
          "syllableText": {
            "grid": [
              {
                "length": 1,
                "start": 0,
                "style": "normal",
                "text": "ma",
                "voices": [
                  "jiutai",
                ],
              },
              {
                "length": 1,
                "start": 1,
                "style": "normal",
                "text": "ta",
                "voices": [],
              },
              {
                "length": 1,
                "start": 2,
                "style": "normal",
                "text": "wa",
                "voices": [
                  "jiutai",
                ],
              },
              {
                "length": 1,
                "start": 3,
                "style": "normal",
                "text": "ga",
                "voices": [
                  "shite",
                ],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "cho",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "o",
                "voices": [],
              },
              {
                "length": 1,
                "start": 6,
                "style": "normal",
                "text": "no",
                "voices": [
                  "jiutai",
                ],
              },
              {
                "length": 1,
                "start": 7,
                "style": "normal",
                "text": "so",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "no",
                "voices": [],
              },
              {
                "length": 1,
                "start": 9,
                "style": "normal",
                "text": "ha",
                "voices": [],
              },
              {
                "length": 1,
                "start": 10,
                "style": "normal",
                "text": "ji",
                "voices": [],
              },
              {
                "length": 1,
                "start": 11,
                "style": "normal",
                "text": "me",
                "voices": [],
              },
              {
                "length": 1,
                "start": 12,
                "style": "normal",
                "text": "(e)",
                "voices": [
                  "shite",
                ],
              },
            ],
            "value": "",
          },
          "text": {
            "grid": [],
            "value": "",
          },
          "vocalRange": {
            "grid": [
              {
                "length": 13,
                "start": 0,
                "style": "normal",
                "text": "l",
                "voices": [],
              },
            ],
            "value": "",
          },
        },
        {
          "beat": {
            "grid": [
              {
                "length": 1,
                "start": 1,
                "style": "normal",
                "text": "1",
                "voices": [],
              },
              {
                "length": 1,
                "start": 2,
                "style": "normal",
                "text": "2",
                "voices": [],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "3",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "4",
                "voices": [],
              },
              {
                "length": 1,
                "start": 7,
                "style": "normal",
                "text": "5",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "6",
                "voices": [],
              },
              {
                "length": 1,
                "start": 10,
                "style": "normal",
                "text": "7",
                "voices": [],
              },
              {
                "length": 1,
                "start": 12,
                "style": "normal",
                "text": "8",
                "voices": [],
              },
            ],
            "value": "",
          },
          "dance": {
            "grid": [
              {
                "length": 3,
                "start": 0,
                "style": "normal",
                "text": "and gazes in the distance.",
                "voices": [],
              },
              {
                "length": 2,
                "start": 6,
                "style": "normal",
                "text": "9. Sits back on his knee.",
                "voices": [],
              },
            ],
            "value": "",
          },
          "nohkan": {
            "grid": [
              {
                "length": 2,
                "start": 3,
                "style": "normal",
                "text": "Naka no takane",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "Naka no takane",
                "voices": [],
              },
            ],
            "value": "",
          },
          "percussion": {
            "grid": [],
            "value": "",
          },
          "phrase": "2",
          "startTime": {
            "grid": [],
            "value": 1204,
          },
          "syllableNumber": {
            "grid": [
              {
                "length": 1,
                "start": 3,
                "style": "normal",
                "text": "1",
                "voices": [],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "2",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "3",
                "voices": [],
              },
              {
                "length": 1,
                "start": 6,
                "style": "normal",
                "text": "4",
                "voices": [],
              },
              {
                "length": 1,
                "start": 7,
                "style": "normal",
                "text": "1",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "2",
                "voices": [],
              },
              {
                "length": 1,
                "start": 9,
                "style": "normal",
                "text": "3",
                "voices": [],
              },
              {
                "length": 1,
                "start": 10,
                "style": "normal",
                "text": "4",
                "voices": [],
              },
              {
                "length": 1,
                "start": 11,
                "style": "normal",
                "text": "5",
                "voices": [],
              },
            ],
            "value": "",
          },
          "syllableText": {
            "grid": [
              {
                "length": 1,
                "start": 3,
                "style": "normal",
                "text": "ni",
                "voices": [],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "n",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "no",
                "voices": [],
              },
              {
                "length": 1,
                "start": 6,
                "style": "normal",
                "text": "o",
                "voices": [],
              },
              {
                "length": 1,
                "start": 7,
                "style": "normal",
                "text": "ji",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "u",
                "voices": [],
              },
              {
                "length": 1,
                "start": 9,
                "style": "normal",
                "text": "ni",
                "voices": [],
              },
              {
                "length": 1,
                "start": 10,
                "style": "normal",
                "text": "da",
                "voices": [],
              },
              {
                "length": 1,
                "start": 11,
                "style": "normal",
                "text": "i",
                "voices": [],
              },
            ],
            "value": "",
          },
          "text": {
            "grid": [],
            "value": "",
          },
          "vocalRange": {
            "grid": [
              {
                "length": 6,
                "start": 3,
                "style": "normal",
                "text": "m",
                "voices": [],
              },
              {
                "length": 3,
                "start": 9,
                "style": "normal",
                "text": "l",
                "voices": [],
              },
            ],
            "value": "",
          },
        },
        {
          "beat": {
            "grid": [
              {
                "length": 1,
                "start": 1,
                "style": "normal",
                "text": "1",
                "voices": [],
              },
              {
                "length": 1,
                "start": 2,
                "style": "normal",
                "text": "2",
                "voices": [],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "3",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "4",
                "voices": [],
              },
              {
                "length": 1,
                "start": 7,
                "style": "normal",
                "text": "5",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "6",
                "voices": [],
              },
              {
                "length": 1,
                "start": 10,
                "style": "normal",
                "text": "7",
                "voices": [],
              },
              {
                "length": 1,
                "start": 12,
                "style": "normal",
                "text": "8",
                "voices": [],
              },
            ],
            "value": "",
          },
          "dance": {
            "grid": [
              {
                "length": 3,
                "start": 0,
                "style": "normal",
                "text": "and gazes in the distance.",
                "voices": [],
              },
              {
                "length": 2,
                "start": 6,
                "style": "normal",
                "text": "9. Sits back on his knee.",
                "voices": [],
              },
            ],
            "value": "",
          },
          "nohkan": {
            "grid": [],
            "value": "",
          },
          "percussion": {
            "grid": [
              {
                "length": 1,
                "start": 1,
                "style": "normal",
                "text": "ho",
                "voices": [],
              },
              {
                "length": 1,
                "start": 2,
                "style": "normal",
                "text": "#note",
                "voices": [],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "ho",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "#note",
                "voices": [],
              },
            ],
            "value": "tome",
          },
          "phrase": "3",
          "startTime": {
            "grid": [],
            "value": 1215,
          },
          "syllableNumber": {
            "grid": [
              {
                "length": 1,
                "start": 3,
                "style": "normal",
                "text": "1",
                "voices": [],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "2",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "3",
                "voices": [],
              },
              {
                "length": 1,
                "start": 6,
                "style": "normal",
                "text": "4",
                "voices": [],
              },
              {
                "length": 1,
                "start": 7,
                "style": "normal",
                "text": "1",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "2",
                "voices": [],
              },
              {
                "length": 1,
                "start": 9,
                "style": "normal",
                "text": "3",
                "voices": [],
              },
              {
                "length": 1,
                "start": 10,
                "style": "normal",
                "text": "4",
                "voices": [],
              },
            ],
            "value": "",
          },
          "syllableText": {
            "grid": [],
            "value": "",
          },
          "text": {
            "grid": [
              {
                "length": 1,
                "start": 3,
                "style": "normal",
                "text": "ke",
                "voices": [],
              },
              {
                "length": 1,
                "start": 4,
                "style": "normal",
                "text": "i",
                "voices": [],
              },
              {
                "length": 1,
                "start": 5,
                "style": "normal",
                "text": "ko",
                "voices": [],
              },
              {
                "length": 1,
                "start": 6,
                "style": "normal",
                "text": "o",
                "voices": [],
              },
              {
                "length": 1,
                "start": 7,
                "style": "normal",
                "text": "te",
                "voices": [],
              },
              {
                "length": 1,
                "start": 8,
                "style": "normal",
                "text": "n",
                "voices": [],
              },
              {
                "length": 1,
                "start": 9,
                "style": "normal",
                "text": "no",
                "voices": [],
              },
              {
                "length": 1,
                "start": 10,
                "style": "normal",
                "text": "o",
                "voices": [],
              },
              {
                "length": 1,
                "start": 12,
                "style": "normal",
                "text": "(o)",
                "voices": [],
              },
            ],
            "value": "",
          },
          "vocalRange": {
            "grid": [
              {
                "length": 1,
                "start": 3,
                "style": "normal",
                "text": "m",
                "voices": [],
              },
            ],
            "value": "",
          },
        },
      ]
    }
    startTime={1192}
    updateScoreToggles={[MockFunction]}
    updateStartTime={[MockFunction]}
  >
    <ScoreControls
      currentTime={1192}
      duration={2000}
      isBeatOn={true}
      isDanceOn={true}
      isNextSentenceOn={true}
      isNohkanOn={true}
      isPercussionOn={true}
      isPrevSentenceOn={false}
      isTextOn={true}
      phrases={
        [
          {
            "beat": {
              "grid": [
                {
                  "length": 1,
                  "start": 1,
                  "style": "normal",
                  "text": "1",
                  "voices": [
                    "jiutai",
                  ],
                },
                {
                  "length": 1,
                  "start": 2,
                  "style": "normal",
                  "text": "2",
                  "voices": [
                    "jiutai",
                  ],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "3",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "4",
                  "voices": [
                    "shite",
                  ],
                },
                {
                  "length": 1,
                  "start": 7,
                  "style": "normal",
                  "text": "5",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "6",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 10,
                  "style": "normal",
                  "text": "7",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 12,
                  "style": "normal",
                  "text": "8",
                  "voices": [
                    "shite",
                  ],
                },
              ],
              "value": "",
            },
            "dance": {
              "grid": [
                {
                  "length": 4,
                  "start": 1,
                  "style": "normal",
                  "text": "9. Kneeling facing front.",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "nohkan": {
              "grid": [
                {
                  "length": 2,
                  "start": 1,
                  "style": "normal",
                  "text": "Naka no takane",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "Naka no takane",
                  "voices": [],
                },
                {
                  "length": 2,
                  "start": 5,
                  "style": "normal",
                  "text": "Naka no takane",
                  "voices": [],
                },
                {
                  "length": 2,
                  "start": 10,
                  "style": "normal",
                  "text": "Naka no takane",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "percussion": {
              "grid": [],
              "value": "mitsuji",
            },
            "phrase": "1",
            "startTime": {
              "grid": [],
              "value": 1192,
            },
            "syllableNumber": {
              "grid": [
                {
                  "length": 1,
                  "start": 0,
                  "style": "normal",
                  "text": "1",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 1,
                  "style": "normal",
                  "text": "2",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 2,
                  "style": "normal",
                  "text": "3",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 3,
                  "style": "normal",
                  "text": "4",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "5",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "6",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 6,
                  "style": "normal",
                  "text": "7",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 7,
                  "style": "normal",
                  "text": "1",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "2",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 9,
                  "style": "normal",
                  "text": "3",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 10,
                  "style": "normal",
                  "text": "4",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 11,
                  "style": "normal",
                  "text": "5",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "syllableText": {
              "grid": [
                {
                  "length": 1,
                  "start": 0,
                  "style": "normal",
                  "text": "ma",
                  "voices": [
                    "jiutai",
                  ],
                },
                {
                  "length": 1,
                  "start": 1,
                  "style": "normal",
                  "text": "ta",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 2,
                  "style": "normal",
                  "text": "wa",
                  "voices": [
                    "jiutai",
                  ],
                },
                {
                  "length": 1,
                  "start": 3,
                  "style": "normal",
                  "text": "ga",
                  "voices": [
                    "shite",
                  ],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "cho",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "o",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 6,
                  "style": "normal",
                  "text": "no",
                  "voices": [
                    "jiutai",
                  ],
                },
                {
                  "length": 1,
                  "start": 7,
                  "style": "normal",
                  "text": "so",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "no",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 9,
                  "style": "normal",
                  "text": "ha",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 10,
                  "style": "normal",
                  "text": "ji",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 11,
                  "style": "normal",
                  "text": "me",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 12,
                  "style": "normal",
                  "text": "(e)",
                  "voices": [
                    "shite",
                  ],
                },
              ],
              "value": "",
            },
            "text": {
              "grid": [],
              "value": "",
            },
            "vocalRange": {
              "grid": [
                {
                  "length": 13,
                  "start": 0,
                  "style": "normal",
                  "text": "l",
                  "voices": [],
                },
              ],
              "value": "",
            },
          },
          {
            "beat": {
              "grid": [
                {
                  "length": 1,
                  "start": 1,
                  "style": "normal",
                  "text": "1",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 2,
                  "style": "normal",
                  "text": "2",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "3",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "4",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 7,
                  "style": "normal",
                  "text": "5",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "6",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 10,
                  "style": "normal",
                  "text": "7",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 12,
                  "style": "normal",
                  "text": "8",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "dance": {
              "grid": [
                {
                  "length": 3,
                  "start": 0,
                  "style": "normal",
                  "text": "and gazes in the distance.",
                  "voices": [],
                },
                {
                  "length": 2,
                  "start": 6,
                  "style": "normal",
                  "text": "9. Sits back on his knee.",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "nohkan": {
              "grid": [
                {
                  "length": 2,
                  "start": 3,
                  "style": "normal",
                  "text": "Naka no takane",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "Naka no takane",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "percussion": {
              "grid": [],
              "value": "",
            },
            "phrase": "2",
            "startTime": {
              "grid": [],
              "value": 1204,
            },
            "syllableNumber": {
              "grid": [
                {
                  "length": 1,
                  "start": 3,
                  "style": "normal",
                  "text": "1",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "2",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "3",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 6,
                  "style": "normal",
                  "text": "4",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 7,
                  "style": "normal",
                  "text": "1",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "2",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 9,
                  "style": "normal",
                  "text": "3",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 10,
                  "style": "normal",
                  "text": "4",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 11,
                  "style": "normal",
                  "text": "5",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "syllableText": {
              "grid": [
                {
                  "length": 1,
                  "start": 3,
                  "style": "normal",
                  "text": "ni",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "n",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "no",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 6,
                  "style": "normal",
                  "text": "o",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 7,
                  "style": "normal",
                  "text": "ji",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "u",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 9,
                  "style": "normal",
                  "text": "ni",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 10,
                  "style": "normal",
                  "text": "da",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 11,
                  "style": "normal",
                  "text": "i",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "text": {
              "grid": [],
              "value": "",
            },
            "vocalRange": {
              "grid": [
                {
                  "length": 6,
                  "start": 3,
                  "style": "normal",
                  "text": "m",
                  "voices": [],
                },
                {
                  "length": 3,
                  "start": 9,
                  "style": "normal",
                  "text": "l",
                  "voices": [],
                },
              ],
              "value": "",
            },
          },
          {
            "beat": {
              "grid": [
                {
                  "length": 1,
                  "start": 1,
                  "style": "normal",
                  "text": "1",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 2,
                  "style": "normal",
                  "text": "2",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "3",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "4",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 7,
                  "style": "normal",
                  "text": "5",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "6",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 10,
                  "style": "normal",
                  "text": "7",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 12,
                  "style": "normal",
                  "text": "8",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "dance": {
              "grid": [
                {
                  "length": 3,
                  "start": 0,
                  "style": "normal",
                  "text": "and gazes in the distance.",
                  "voices": [],
                },
                {
                  "length": 2,
                  "start": 6,
                  "style": "normal",
                  "text": "9. Sits back on his knee.",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "nohkan": {
              "grid": [],
              "value": "",
            },
            "percussion": {
              "grid": [
                {
                  "length": 1,
                  "start": 1,
                  "style": "normal",
                  "text": "ho",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 2,
                  "style": "normal",
                  "text": "#note",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "ho",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "#note",
                  "voices": [],
                },
              ],
              "value": "tome",
            },
            "phrase": "3",
            "startTime": {
              "grid": [],
              "value": 1215,
            },
            "syllableNumber": {
              "grid": [
                {
                  "length": 1,
                  "start": 3,
                  "style": "normal",
                  "text": "1",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "2",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "3",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 6,
                  "style": "normal",
                  "text": "4",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 7,
                  "style": "normal",
                  "text": "1",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "2",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 9,
                  "style": "normal",
                  "text": "3",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 10,
                  "style": "normal",
                  "text": "4",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "syllableText": {
              "grid": [],
              "value": "",
            },
            "text": {
              "grid": [
                {
                  "length": 1,
                  "start": 3,
                  "style": "normal",
                  "text": "ke",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 4,
                  "style": "normal",
                  "text": "i",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 5,
                  "style": "normal",
                  "text": "ko",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 6,
                  "style": "normal",
                  "text": "o",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 7,
                  "style": "normal",
                  "text": "te",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 8,
                  "style": "normal",
                  "text": "n",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 9,
                  "style": "normal",
                  "text": "no",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 10,
                  "style": "normal",
                  "text": "o",
                  "voices": [],
                },
                {
                  "length": 1,
                  "start": 12,
                  "style": "normal",
                  "text": "(o)",
                  "voices": [],
                },
              ],
              "value": "",
            },
            "vocalRange": {
              "grid": [
                {
                  "length": 1,
                  "start": 3,
                  "style": "normal",
                  "text": "m",
                  "voices": [],
                },
              ],
              "value": "",
            },
          },
        ]
      }
      startTime={1192}
      updateScoreToggles={[Function]}
      updateStartTime={[Function]}
    >
      <div
        className="score-controls"
        id="stepShodanControls"
      >
        <div
          className="sentence-control"
        >
          <button
            className="sentence-control__prev"
            disabled={true}
            onClick={[Function]}
          >
            <i
              className="fas fa-step-backward"
            />
          </button>
          <div
            className="sentence-control__status "
          >
            <span
              className="sentence-control__title"
            >
              Measure:
            </span>
            <span
              className="sentence-control__current"
            >
              1
              /
              3
            </span>
          </div>
          <button
            className="sentence-control__next"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fas fa-step-forward"
            />
          </button>
        </div>
        <div
          className="score-controls__time"
        >
          <div
            className="score-controls__elapsed-time"
          >
            00:00
          </div>
          <div
            className="video-progress"
          >
            <Connect(TimelineScrubber)
              duration={2000}
              startTime={1192}
            >
              <TimelineScrubber
                currentTime={1192}
                duration={2000}
                startTime={1192}
                updateCurrentTime={[Function]}
              >
                <div
                  className="timeline-scrubber"
                  onBlur={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                  onWheel={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="timeline-scrubber__handle"
                    role="button"
                    style={
                      {
                        "left": "0%",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
              </TimelineScrubber>
            </Connect(TimelineScrubber)>
          </div>
          <div
            className="score-controls__remaining-time"
          >
            33:20
          </div>
        </div>
        <div
          className="score-controls__filters"
          id="stepShodanFilters"
        >
          <button
            className="score-controls__filters-button"
            disabled={false}
            onClick={[Function]}
          >
            Filters
          </button>
          <div
            className="score-controls__filters-popup hidden"
          >
            <ul
              className="channel-toggles"
            >
              <li
                className="toggles__title"
              >
                Lines
              </li>
              <li>
                <div
                  className="custom-checkbox"
                >
                  <input
                    checked={true}
                    id="scoreBeat"
                    onChange={[Function]}
                    onKeyPress={null}
                    type="checkbox"
                  />
                  <label
                    htmlFor="scoreBeat"
                  >
                    <span
                      className="custom-checkbox__text"
                    >
                      Beat
                    </span>
                  </label>
                </div>
              </li>
              <li>
                <div
                  className="custom-checkbox"
                >
                  <input
                    checked={true}
                    id="scoreText"
                    onChange={[Function]}
                    onKeyPress={null}
                    type="checkbox"
                  />
                  <label
                    htmlFor="scoreText"
                  >
                    <span
                      className="custom-checkbox__text"
                    >
                      Text
                    </span>
                  </label>
                </div>
              </li>
              <li>
                <div
                  className="custom-checkbox"
                >
                  <input
                    checked={true}
                    id="scorePercussion"
                    onChange={[Function]}
                    onKeyPress={null}
                    type="checkbox"
                  />
                  <label
                    htmlFor="scorePercussion"
                  >
                    <span
                      className="custom-checkbox__text"
                    >
                      Ōtsu-Kotsuzumi
                    </span>
                  </label>
                </div>
              </li>
              <li>
                <div
                  className="custom-checkbox"
                >
                  <input
                    checked={true}
                    id="scoreNohkan"
                    onChange={[Function]}
                    onKeyPress={null}
                    type="checkbox"
                  />
                  <label
                    htmlFor="scoreNohkan"
                  >
                    <span
                      className="custom-checkbox__text"
                    >
                      Nohkan
                    </span>
                  </label>
                </div>
              </li>
              <li>
                <div
                  className="custom-checkbox"
                >
                  <input
                    checked={true}
                    id="scoreDance"
                    onChange={[Function]}
                    onKeyPress={null}
                    type="checkbox"
                  />
                  <label
                    htmlFor="scoreDance"
                  >
                    <span
                      className="custom-checkbox__text"
                    >
                      Dance
                    </span>
                  </label>
                </div>
              </li>
            </ul>
            <ul
              className="measure-toggles"
            >
              <li
                className="toggles__title"
              >
                Sentences
              </li>
              <li>
                <div
                  className="custom-checkbox"
                >
                  <input
                    checked={false}
                    id="scorePrevSentence"
                    onChange={[Function]}
                    onKeyPress={null}
                    type="checkbox"
                  />
                  <label
                    htmlFor="scorePrevSentence"
                  >
                    <span
                      className="custom-checkbox__text"
                    >
                      Previous Sentence
                    </span>
                  </label>
                </div>
              </li>
              <li>
                <div
                  className="custom-checkbox"
                >
                  <input
                    checked={true}
                    id="scoreNextSentence"
                    onChange={[Function]}
                    onKeyPress={null}
                    type="checkbox"
                  />
                  <label
                    htmlFor="scoreNextSentence"
                  >
                    <span
                      className="custom-checkbox__text"
                    >
                      Next Sentence
                    </span>
                  </label>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </ScoreControls>
  </Connect(ScoreControls)>
</Provider>
`;
